# CEG491X-Capstone

./: .gitignore  AUDIO_DEBUGGING_GUIDE.md  AUDIO_PERSISTENCE_FIX.md  MOCKDATA_PERSISTENCE_ISSUE.md  NODEMON_RESTART_FIX.md  README.md  TRANSCRIPTION_ERROR_ANALYSIS.md  package-lock.json
Sd card - read file/: sdkconfig  sdkconfig.old
Sd card - read file/main/: sd_card_read.c
Sd card format BEST/: CMakeLists.txt
Sd card format BEST/main/: main.c
accelerometer/: GreenYellowRed_accelerometer.ino
echolog-webapp/: Dockerfile  docker-compose.yml  nginx.conf
echolog-webapp/backend/: .gitignore  Dockerfile  nodemon.json  package-lock.json  package.json
echolog-webapp/frontend/: .gitignore  package-lock.json  package.json
esp32_audio-master/i2s_sampling/: CMakeLists.txt  esp_logs.txt  platformio.ini
microphone/: CMakeLists.txt  platformio.ini
microphone/src/: ADCSampler.cpp  ADCSampler.h  WiFiCredentials.h  main.cpp
microphone/test/: README  cleanProject.code-workspace  readWAV.py
model/: README.md
model/Prototype 2 (v0.8)/: obj.mtl
model/Prototype 3 (v1.0)/: PETG Bottom Shell.stl  PETG Forearm Mount.stl  PETG Top Cover.stl  TPU Front Bumper.stl  TPU Middle Gasket.stl  TPU Rear Bumper.stl  TPU Rear USB-C Bumper.stl  TPU Side Bumper .stl  TPU Side Corner Bumper.stl
model/v0.5/: Bottom.stl  Middl.stl  Middle Piece.stl  Top.stl
onboardos/: README.md
onboardos/heltec/: CMakeLists.txt  platformio.ini  sdkconfig.defaults  sdkconfig.esp32-s3-devkitc-1
onboardos/oldversions/: supermini_shared_spi.c
onboardos/supermini/: sdkconfig.defaults  sdkconfig.esp32-s3-devkitc-1
onboardos/supermini/src/: CMakeLists.txt  bluetooth_mode.c  bluetooth_mode.h  config_manager.c  config_manager.h  globals.h  gps_module.c  gps_module.h  main.c  recording_mode.c  recording_mode.h  rtc_module.c  rtc_module.h  self_test.c  self_test.h
webapp/: DOCKER.md  IMPLEMENTATION.md  README-DATABASE-TIMELINES.md  README.md  SETUP.md  docker-compose.yml
webapp/DevTool/: index.html  main.py  main.spec
webapp/Frontend - Concept/: menu.html
webapp/backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  nodemon.json  (+3 more)
(+125 files in other folders)
